# atomic_ref

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
include/avakar/: atomic.h  atomic_ref.h
include/avakar/internal/: atomic_ref.gcc.h  atomic_ref.msvc.x86.h
src/: atomic_ref.gcc.h  atomic_ref.msvc.arm64.h  atomic_ref.msvc.x64.h  atomic_ref.msvc.x86.h  atomic_ref.msvc.x86_x64.h
test/: test.cpp
